--- a/Ró_SortTiles2/index.html
+++ b/Ró_SortTiles2/index.html
@@ -19,17 +19,18 @@
 <h1>Sortable Column Using <a href="http://greensock.com/products/" target="_blank">GreenSock</a></h1>
 
 
-    <div class=" list" id="list1">
-        <div id ="dragTile" class="tile"></div>
-    </div>
-
+<div class="list" id="list1">
+  <div id ="dragTile" class="tile"></div>
+</div>
+<br>
+<div id="addTile" class ="button" onclick="addTile();">Add Tile</div>
 
 <script src='JS/jquery.js'></script>
 <script src='JS/TweenMax.js'></script>
 
-<script src='newIndex.js'></script>
+
 <script src='JS/Draggable.js'></script>
-<!--<script src="js/index.js"></script>-->
+<script src="js/myJavaScript.js"></script>
 
 
 </body>
