Added animation Tweens to addTile function. Now the tiles will change size and shadow when they are moved.

--- a/Ró_SortTiles2/index.html
+++ b/Ró_SortTiles2/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="UTF-8">
 
-  <title>Róisín Test - Sortable Grid Using GreenSock Draggable</title>
+  <title>Róisín - Sortable Column</title>
 
   <link rel="stylesheet" type="text/css" href="CSS/Bootstrap/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -20,10 +20,10 @@
 
 
 <div class="list" id="list1">
-  <div id ="dragTile" class="tile"></div>
 </div>
 <br>
 <div id="addTile" class ="button" onclick="addTile();">Add Tile</div>
+<div>Hi</div>
 
 <script src='JS/jquery.js'></script>
 <script src='JS/TweenMax.js'></script>
