--- a/Ró_SortTiles2/index.html
+++ b/Ró_SortTiles2/index.html
@@ -16,14 +16,32 @@
 
 <body>
 
-<h1>Sortable Column Using <a href="http://greensock.com/products/" target="_blank">GreenSock</a></h1>
+<h3>Sortable Column Using <a href="http://greensock.com/products/" target="_blank">GreenSock</a></h3>
 
 
-<div class="list" id="list1">
-</div>
-<br>
+  <div class="row">
+    <div class="col-md-2 day">
+          <div class="list" id="list1">
+          </div>
+    </div>
+
+    <div class="col-md-2 day">
+          <div class="list" id="list2">
+          </div>
+    </div>
+
+    <div class="col-md-2 day">
+          <div class="list" id="list3">
+          </div>
+    </div>
+  </div>
 <div id="addTile" class ="button" onclick="addTile();">Add Tile</div>
-<div>Hi</div>
+
+
+
+
+
+
 
 <script src='JS/jquery.js'></script>
 <script src='JS/TweenMax.js'></script>
