Made five list columns. Dynamically building grid on first list column.

--- a/Ró_SortTiles2/index.html
+++ b/Ró_SortTiles2/index.html
@@ -17,12 +17,15 @@
 <body>
 
 <h3>Sortable Column Using <a href="http://greensock.com/products/" target="_blank">GreenSock</a></h3>
+<div id="addTile" class ="button" onclick="addTile();">Add Tile</div>
+<br>
 
 
+<div id="container">
   <div class="row">
     <div class="col-md-2 day">
-          <div class="list" id="list1">
-          </div>
+          <ul class="list" id="list1">
+          </ul>
     </div>
 
     <div class="col-md-2 day">
@@ -34,14 +37,18 @@
           <div class="list" id="list3">
           </div>
     </div>
+
+    <div class="col-md-2 day">
+      <div class="list" id="list4">
+      </div>
+    </div>
+
+    <div class="col-md-2 day">
+      <div class="list" id="list5">
+      </div>
+    </div>
   </div>
-<div id="addTile" class ="button" onclick="addTile();">Add Tile</div>
-
-
-
-
-
-
+</div>
 
 <script src='JS/jquery.js'></script>
 <script src='JS/TweenMax.js'></script>
