Added another list of tiles inside the second column. Made this sortable (using code from codepen). Added a button to call addSortable(), but haven't declared the function yet.

--- a/Ró_SortTiles2/index.html
+++ b/Ró_SortTiles2/index.html
@@ -17,19 +17,26 @@
 <body>
 
 <h3>Sortable Column Using <a href="http://greensock.com/products/" target="_blank">GreenSock</a></h3>
-<div id="addTile" class ="button" onclick="addTile();">Add Tile</div>
+
 <br>
+
 
 
 <div id="container">
   <div class="row">
     <div class="col-md-2 day">
+      <div id="addTile" class ="button" onclick="addTile();">Add Tile</div>
           <ul class="list" id="list1">
           </ul>
     </div>
 
     <div class="col-md-2 day">
+      <div id="addSortable" class ="button" onclick="addSortable();">Add Sortable</div>
           <div class="list" id="list2">
+            <div class="tile">1---------</div>
+            <div class="tile">2---------</div>
+            <div class="tile">3---------</div>
+            <div class="tile">4---------</div>
           </div>
     </div>
 
