--- a/Ró_SortTiles2/index.html
+++ b/Ró_SortTiles2/index.html
@@ -24,6 +24,7 @@
 
 <div id="container">
   <div class="row">
+
     <div class="col-md-2 day">
       <div id="addTile" class ="button" onclick="addTile();">Add Tile</div>
           <ul class="list" id="list1">
@@ -32,12 +33,8 @@
 
     <div class="col-md-2 day">
       <div id="addSortable" class ="button" onclick="addSortable();">Add Sortable</div>
-          <div class="list" id="list2">
-            <div class="tile">1---------</div>
-            <div class="tile">2---------</div>
-            <div class="tile">3---------</div>
-            <div class="tile">4---------</div>
-          </div>
+          <ul class="list" id="list2">
+          </ul>
     </div>
 
     <div class="col-md-2 day">
